@@ -20,25 +20,29 @@
 
  */
 
+// Tags: GNU-CRYPTO JDK1.4
 
 package gnu.testlet.gnu.javax.crypto.jce;
 
+import gnu.javax.crypto.jce.spec.BlockCipherParameterSpec;
 import gnu.testlet.TestHarness;
 import gnu.testlet.Testlet;
 
 import java.security.InvalidKeyException;
 import java.security.Key;
 import java.security.SecureRandom;
+import java.security.spec.AlgorithmParameterSpec;
 
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 
 /**
- * Regression test for logic around engineInit(int, Key, SecureRandom) If the
- * cipher being initialized requires parameters not derivable from the key, then
- * defaults/random parameters must be generated, provide the opmode is ENCRYPT
- * and WRAP. If the opmode is DECRYPT or UNWRAP then an exception should be
- * thrown.
+ * Regression test for logic around CipherSpi.engineInit()s. If the 
+ * cipher being initialized requires parameters not derivable from 
+ * the key, then defaults/random parameters must be generated, provide
+ * the opmode is ENCRYPT and WRAP. If the opmode is DECRYPT or UNWRAP 
+ * then an exception should be thrown. Refer to javadoc for 
+ * javax.crypto.CipherSpi for more information.
  */
 public class TestOfCipherEngineInit
     implements Testlet
@@ -59,6 +63,8 @@ public class TestOfCipherEngineInit
     setUp(harness);
     testECB(harness);
     testNotECB(harness);
+    testInitWithParameterSpec(harness);
+    
   }
 
   private void setUp(TestHarness harness)
@@ -153,6 +159,110 @@ public class TestOfCipherEngineInit
         harness.fail(String.valueOf(x));
       }
   }
+
+  // Similar test to above but tests the behaviour for:
+  // Cipher.init(int i, Key k, AlgorithmParameterSpec param)
+  // If param is null, and the cipher needs algorithm parameters to
+  // function then init should create random/default parameters provided
+  // the cipher is in ENCRYPT or WRAP mode, if in DECRYPT or UNWRAP mode
+  // the function must throw an InvalidKeyException.
+  // Extrapolation: If algorithm does not require additional params
+  // then none should be created?
+  private void testInitWithParameterSpec(TestHarness harness)
+  {
+    try
+      {
+        cipher = Cipher.getInstance("DESede/ECB/NoPadding");
+        String input = "Does this work ?";
+
+        cipher.init(Cipher.ENCRYPT_MODE, key, (AlgorithmParameterSpec) null);
+        iv = cipher.getIV();
+        harness.check(
+                      iv == null,
+                      "(Encrypting - NULL AlgorithmParameterSpec) cipher.getIV() for ECB MUST return null");
+        byte[] plaintext = input.getBytes();
+        byte[] ciphertext = cipher.doFinal(plaintext);
+
+        iv = null;
+        cipher.init(Cipher.DECRYPT_MODE, key, (AlgorithmParameterSpec) null);
+        iv = cipher.getIV();
+        harness.check(
+                      iv == null,
+                      "(Decrypting - NULL AlgorithmParameterSpec) cipher.getIV() for ECB MUST return null");
+        byte[] plaintext2 = cipher.doFinal(ciphertext);
+        String recovered = new String(plaintext2);
+
+        harness.check(input.equals(recovered),
+                      "Original and recovered texts MUST be equal");
+      }
+    catch (Exception x)
+      {
+        harness.debug(x);
+        harness.fail(String.valueOf(x));
+      }
+
+    try
+      {
+        cipher = Cipher.getInstance("DESede/CBC/NoPadding");
+        String input = "Does this work ?";
+
+        cipher.init(Cipher.ENCRYPT_MODE, key, (AlgorithmParameterSpec) null);
+        iv = cipher.getIV();
+        harness.check(
+                      iv != null,
+                      "(Encrypting - NULL AlgorithmParameterSpec) cipher.getIV() MUST return random IV if none provided");
+        harness.check(iv.length == 8,
+                      "(Encrypting - NULL AlgorithmParameterSpec) IV length for MUST be 8");
+        byte[] plaintext = input.getBytes();
+        byte[] ciphertext = cipher.doFinal(plaintext);
+
+        iv = null;
+
+        AlgorithmParameterSpec backupAlg = cipher.getParameters().getParameterSpec(
+                                                                                   BlockCipherParameterSpec.class);
+
+        try
+          {
+            cipher.init(Cipher.DECRYPT_MODE, key, (AlgorithmParameterSpec) null);
+            harness.fail("(Decrypting - NULL AlgorithmParameterSpec) init of CBC with NULL IV NOT possible");
+          }
+        catch (Exception e)
+          {
+            String type = e.getClass().getName();
+            harness.check(
+                          type.equals(InvalidKeyException.class.getName()),
+                          "(Decrypting - NULL AlgorithmParameterSpec) CBC init with NULL IV MUST throw exception");
+          }
+        try
+          {
+            cipher.init(Cipher.DECRYPT_MODE, key, backupAlg);
+          }
+        catch (Exception e)
+          {
+            harness.fail("(Decrypting - Valid AlgorithmParameterSpec) Exception not expected -init with proper parameters");
+          }
+
+        iv = cipher.getIV();
+        harness.check(
+                      iv != null,
+                      "(Decrypting - Valid AlgorithmParameterSpec) cipher.getIV() for CBC init with NULL params MUST NOT return null");
+        harness.check(iv.length == 8,
+                      "(Decrypting - NULL AlgorithmParameterSpec) IV length for CBC should be 8");
+        byte[] plaintext2 = cipher.doFinal(ciphertext);
+        String recovered = new String(plaintext2);
+
+        harness.check(input.equals(recovered),
+                      "(Valid AlgorithmParameterSpec) Original and recovered texts MUST be equal");
+
+      }
+    catch (Exception x)
+      {
+        harness.debug(x);
+        harness.fail(String.valueOf(x));
+      }
+
+  }
+
   
   //TODO: Add tests for WRAP and UNWRAP too.
   
