@@ -1,3 +1,10 @@
+2006-06-15  Vivek Lakshmanan  <vivekl@redhat.com>
+
+	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipherEngineInit.java: Add
+	proper tag information.
+	(testInitWithParameterSpec): New method.
+	(test): Add call to new test for init with null AlgorithmParameterSpec.
+
 2006-06-14  Vivek Lakshmanan  <vivekl@redhat.com>
 
 	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipherEngineInit.java: New test. 
